--- a/css/main.css
+++ b/css/main.css
@@ -4,5 +4,6 @@ body {
 	background-position: center;
 	background-attachment: fixed;
 	background-repeat: no-repeat;
+	background-color: #000;
 	color: #cfcfcf;
 }
